# hackerrank-ai

./: CMakeLists.txt  README.md
Data/: pac_maze1.csv  pac_maze123.ods  pac_maze2.csv  pac_maze3.csv  pac_test1.txt
click-o-mania/cpp/: CMakeLists.txt  avx-experiments.cpp  click-o-mania.cpp  click-o-mania.h  main.cpp  test-click-o-mania.cpp
click-o-mania/julia/: DataStructures.jl  block_list.jl  click-o-mania-test.jl  click_o_mania.jl  profile-click-o-mania.jl  ring.jl  test-ring.jl
python/: codility-01.py  codility-ms1.py  npuzzle.py  pacman.py
src/: board.cpp  board.h  cleaning-bot-large.cpp  cleaning-bot-permute.cpp  cleaning-bot-search.cpp  main.cpp  pacman.cpp  pacman.h  utils.cpp  utils.h
src/MazeEscape/: CMakeLists.txt  agent.cpp  maze-escape-main.cpp  maze-escape-sub1.cpp  maze-escape-sub2.cpp  maze-escape.h  maze.cpp
src/julia/: DataStructures.jl  DataStructures.jl.258111.mem  click-o-mania-test.jl  click_o_mania.jl  click_o_mania.jl.258111.mem  profile-click-o-mania.jl  profile-partition.txt  profile-with-ring.txt  profile.txt
src/lib/: CMakeLists.txt  board.cpp  board.h  utils.cpp  utils.h
test/: test_maze_escape.cpp  test_pac.cpp  test_pac_board.cpp
