cmake_minimum_required(VERSION 3.16)
find_package(PkgConfig REQUIRED)
project(c++17)
set(CMAKE_CXX_STANDARD 17)
project(hackerrank-ai)
include_directories(${GTEST_INCLUDE_DIRS} src/ )
link_directories( ${GTEST_LIBRARY_DIRS} )
add_definitions(${GTEST_CFLAGS_OTHER})
add_executable(hackerrank-ai src/main.cpp src/cleaning-bot-permute.cpp src/cleaning-bot-search.cpp src/board.h src/board.cpp src/utils.cpp src/utils.h src/pacman.cpp test/test_pac_board.cpp)

pkg_check_modules(GTEST REQUIRED gtest>=1.8.1)
add_executable(unit_tests test/test_pac_board.cpp src/board.cpp)
target_link_libraries(unit_tests gtest gtest_main pthread)
#add_test(unit_tests)